--- a/style.css
+++ b/style.css
@@ -1,35 +1,37 @@
 @import url("animation.css");
-
-*{
+* {
     margin: 0;
     padding: 0;
 }
-html,body{
+
+html,
+body {
     height: 100%;
 }
-.container{
+
+.container {
     width: 1280px;
-    min-height: 100%;
+    min-height: 3000px;
     margin: 0 auto;
     background-color: gray;
 }
 
-.container h1{
+.container h1 {
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.5em;
 }
 
+
 /* pav style */
 
-.block_pav{
+.block_pav {
     display: flex;
     justify-content: center;
     margin: 50px 0 50px 0;
 }
 
-.block_pav .circle_pav{
-
+.block_pav .circle_pav {
     display: inline-block;
     width: 150px;
     height: 150px;
@@ -39,7 +41,131 @@ html,body{
     animation-duration: 5s;
     animation-fill-mode: none;
     animation-iteration-count: infinite;
-    
 }
 
+
 /* end pav style */
+
+
+/* start  dron_aaa style */
+
+.block_dron_aaa {
+    width: 700px;
+    height: 700px;
+    margin: 100px auto 100px auto;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 50%;
+    transition: 120s;
+    transform: rotate(20deg);
+}
+
+.block_dron_aaa:hover {
+    transform: rotate(3000deg);
+    transition: 120s;
+}
+
+.flex_aaa {
+   
+    width: 100px;
+    height: 100px;
+    background-color: #fff;
+    border-radius: 10%;
+    position: relative;
+    background-color: red;
+}
+
+.box_aaa1 {
+    order: 1;
+    transition: 50s;
+}
+
+.box_aaa1:hover {
+    transform: rotate(3000deg) scale(1.5);
+    transition: 3s;
+    background-color: yellow;
+}
+
+.box_aaa2:hover {
+    transform: rotate(3000deg) scale(1.5);
+    transition: 3s;
+    background-color: aqua;
+}
+
+.box_aaa3:hover {
+    transform: rotate(3000deg) scale(1.5);
+    transition: 3s;
+    background-color: blue;
+}
+
+.box_aaa4:hover {
+    transform: rotate(3000deg) scale(1.5);
+    transition: 3s;
+    background-color: green;
+}
+
+.box_aaa2 {
+    order: 2;
+    align-self: flex-start;
+    margin-top: 50px;
+    margin-left: 90px;
+    transition: 50s;
+}
+
+.box_aaa3 {
+    order: 3;
+    align-self: flex-end;
+    margin-bottom: 50px;
+    margin-right: 70px;
+    transition: 50s;
+}
+
+.box_aaa4 {
+    order: 4;
+    margin-left: 70px;
+    transition: 50s;
+}
+
+.round_aaa {
+    width: 100px;
+    height: 100px;
+   
+    position: absolute;
+    background-color: #fff;
+    transform: rotate(135deg);
+    border-radius: 10%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.flawer_aaa {
+    width: 30px;
+    height: 30px;
+    border: 5px solid blue;
+    border-radius: 50%;
+    background-color: gold;
+    transition: 10s;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
