подбросил специи в кашу

--- a/style.css
+++ b/style.css
@@ -1,20 +1,23 @@
 @import url("animation.css");
 
-*{
+* {
     margin: 0;
     padding: 0;
 }
-html,body{
+
+html,
+body {
     height: 100%;
 }
-.container{
+
+.container {
     width: 1280px;
     min-height: 100%;
     margin: 0 auto;
     background-color: gray;
 }
 
-.container h1{
+.container h1 {
     text-align: center;
     text-transform: uppercase;
     letter-spacing: 0.5em;
@@ -22,13 +25,13 @@ html,body{
 
 /* pav style */
 
-.block_pav{
+.block_pav {
     display: flex;
     justify-content: center;
     margin: 50px 0 50px 0;
 }
 
-.block_pav .circle_pav{
+.block_pav .circle_pav {
 
     display: inline-block;
     width: 150px;
@@ -39,7 +42,26 @@ html,body{
     animation-duration: 5s;
     animation-fill-mode: none;
     animation-iteration-count: infinite;
-    
+
 }
 
 /* end pav style */
+
+/*rom style*/
+
+.block-rom {
+    display: flex;
+    justify-content: center
+}
+
+.coffee-rom:hover {
+    box-shadow: 0 0 0 4px #ddd, 0 0 0 8px #ccc, 0 0 0 12px #bbb, 0 0 0 14px #aaa, 0 0 0 16px #999, 0 0 0 18px #888;
+    transition: all 1000ms;
+    -o-transition: all 1000ms;
+    -moz-transition: all 1000ms;
+    -webkit-transition: all 1000ms;
+}
+
+}
+
+/*end rom style*/
